Sun, 19 Aug 2007 09:21:44 +0200 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Submit modified patch from Richard 
          Voigt (richardvoigt gmail com) to fix an error with invalid data 
          channel covers (e.g. a 404 HTML page at the URL of the real image)
          Will now fall back to the "globe" icon when channel icon fails to 
          load

Sun, 19 Aug 2007 08:46:27 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Fix error with empty episode title 
          detection, thanks to Wilfred van Rooijen (wvanrooijen yahoo.com) 
          for reporting this issue :) .. and sorry for not getting it right
          the first time..

Tue, 14 Aug 2007 03:51:19 +0200 <thp@perli.net>
        * src/gpodder/libgpodder.py: Indentation fixed, sorry :)

Mon, 13 Aug 2007 23:51:40 +0200 <thp@perli.net>
        * src/gpodder/libgpodder.py: Use new subprocess module for opening 
          episodes for playback (media player), add error reporting to 
          playback_episode() function so we can detect not available players,
          like "gnome-open" in the inital config (thanks to Richard Voigt 
          <richardvoigt gmail.com> for reporting this error + suggestions)
        * src/gpodder/gui.py: Add GUI support for error reporting on episode 
          playback error (when command is not available, etc..)

Mon, 13 Aug 2007 22:55:29 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: If episode titles are bad (empty or 
          plainly consisting of not allowed chars), we are using a hashed 
          filename, based on the URL (this is the same as the filename in the 
          gPodder download directory); this fixes a bug with BUGGY(!!) RSS 
          feeds that don't have episode titles in their feeds
	  Thanks to Wilfred van Rooijen <wvanrooijen yahoo.com> for reporting
	  this bug!

Fri, 10 Aug 2007 14:57:47 +0200 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Catch error when the